# xcp-storage

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/actions/setup-python-env/: action.yml
.github/workflows/: code-checkers.yml
src/linstor_witness/: README.md  provision-witness
src/linstor_witness/src/scripts/: drbd_install.bash  linstor_install.bash  prepare_template.bash  setup.bash
src/xcp_storage/: log.py
src/xcp_storage/config/: platform.py
src/xcp_storage/network/: iptables.py
src/xcp_storage/typing/: __init__.py
src/xcp_storage/utils/: exception.py  process.py  reflection.py
src/xcp_storage/utils/json/: __init__.py
src/xcp_storage/utils/json/rpc/: __init__.py
stubs/linstor/: __init__.pyi  config.pyi  consts_githash.pyi  errors.pyi  kv.pyi  linstorapi.pyi  properties.pyi  resource.pyi  resourcegroup.pyi  responses.pyi  sharedconsts.pyi  size_calc.pyi
tests/network/: test_iptables.py
tests/utils/: test_json_rpc.py
