[metadata]
name = xcp-storage
version = 1.0.0
description = XCP storage layer, scripts and drivers
author = Ronan Abhamon <ronan.abhamon@vates.tech>
author_email = ronan.abhamon@vates.tech
url = https://vates.tech
license = GPLv3

[options]
packages = find:
package_dir =
    =src
# TODO(XCPNG-3032): Change it for modern python.
python_requires = >=3.6

[options.packages.find]
where = src
